# schooltino

./: .gitignore  .replit  AI_PAPER_API_DOCUMENTATION.md  admit_card_debug_test.py  admit_card_full_test.py  backend_test.py  build.sh  demo_health_check.py  demo_health_check_v2.py  design_guidelines.json  new_features_test.py  package-lock.json  package.json  pyproject.toml  replit.md  school_data_backup_20260207_141258.json  schooltino_demo_test.py  test_admission_fix.py  test_ai_paper_generator.py  test_paper_gen_simple.py  test_result.md
.emergent/: emergent.yml  summary.txt
attached_assets/: PACKAGE_SUMMARY_1770545074853.txt  Pasted--MONGODB-BACKUP-RESTORE-INSTRUCTIONS--1770479898936_1770479898938.txt  Pasted--Modern-Schooltino-Theme-2026-File-frontend-src-styles-_1770545025155.txt  Pasted--SCHOOL-ERP-TIMETABLE-MODULE-FINAL-REQUIREMENTS-SCRIPT-_1770912417325.txt  Pasted--Schooltino-Dashboard-Modern-Theme-Inspired-by-EduNova-_1770552033093.txt  Pasted--Summary-Complete-Production-Data-Ready-WITH-PASSWORDS-_1770480553879.txt  Pasted--frontend-src-pages-ModernDashboard-js-import-React-use_1770545052558.txt  Pasted--frontend-src-pages-ModernLogin-js-import-React-useStat_1770545040244.txt  Pasted--school-id-7fc6bb2f-fa0d-43b6-9abd-4483d150eb0c-address_1770479918978.txt  Pasted-Ab-main-aapko-proper-download-links-deta-hoon-Summary-D_1770473804582.txt  SCHOOLTINO_BUG_REPORT_1770543846810.md  SETUP_GUIDE_1770545074855.md  SchooltinoLightDashboard_1770557329213.jsx
backend/: .env  .env.example  import_data.py  main.py  production_data_with_passwords.json  requirements.txt  (+2 more)
(+514 files in other folders)
