[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.36",
    "elevenlabs>=2.32.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "litellm>=1.81.4",
    "motor>=3.7.1",
    "openai>=2.16.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "qrcode>=8.2",
    "razorpay>=2.0.0",
    "requests>=2.32.5",
    "stripe>=14.2.0",
    "uvicorn>=0.40.0",
]
